[gd_scene load_steps=19 format=3 uid="uid://b0fbxw805fq4k"]

[ext_resource type="Script" path="res://UI/GameOverMenue/GameOverMenue.gd" id="1_pirxp"]
[ext_resource type="FontFile" uid="uid://kiis2ifdyxrj" path="res://fonts/FFFFORWA.TTF" id="2_juc04"]
[ext_resource type="Script" path="res://UI/GameOverMenue/GOver.gd" id="2_rl5gj"]
[ext_resource type="Script" path="res://UI/GameOverMenue/CatsSaved.gd" id="3_llbj0"]
[ext_resource type="Texture2D" uid="uid://p56shr1lauoo" path="res://MainMenue/Background.png" id="4_62xnu"]
[ext_resource type="PackedScene" uid="uid://c6j13648rlft8" path="res://UI/GameOverMenue/cat.tscn" id="4_osp8a"]
[ext_resource type="Script" path="res://UI/GameOverMenue/Points.gd" id="5_nttng"]
[ext_resource type="Script" path="res://UI/GameOverMenue/Background.gd" id="5_vaqkm"]
[ext_resource type="PackedScene" uid="uid://d16f3ti8mramw" path="res://Highscore/highscore.tscn" id="6_e401k"]
[ext_resource type="PackedScene" uid="uid://ih31k1u8xvg7" path="res://music_player.tscn" id="6_kh1h2"]
[ext_resource type="Texture2D" uid="uid://bukuu1fektm8r" path="res://UI/GameOverMenue/sadcats.png" id="8_65mee"]
[ext_resource type="PackedScene" uid="uid://b0d0g8qifr4ne" path="res://Credits/credits_screen.tscn" id="12_ccpjb"]

[sub_resource type="Gradient" id="Gradient_a1vhr"]
offsets = PackedFloat32Array(0, 0.622159, 0.977273)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lmvbm"]
gradient = SubResource("Gradient_a1vhr")
width = 600
height = 600
fill_to = Vector2(1, 0.239316)

[sub_resource type="Gradient" id="Gradient_awcyf"]
offsets = PackedFloat32Array(0, 0.511364, 1)
colors = PackedColorArray(0.803922, 0, 0, 1, 0.882353, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m4ld1"]
gradient = SubResource("Gradient_awcyf")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbbma"]
size = Vector2(20, 610)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7pbh"]
size = Vector2(999, 20)

[node name="GameOverMenue" type="Node2D"]
script = ExtResource("1_pirxp")

[node name="Transition" type="Area2D" parent="."]

[node name="TransitionSprite" type="Sprite2D" parent="Transition"]
z_index = -10
position = Vector2(-1159, 300.5)
scale = Vector2(3.846, 1.01167)
texture = SubResource("GradientTexture2D_lmvbm")

[node name="GOver" type="Node2D" parent="Transition"]
z_index = -10
script = ExtResource("2_rl5gj")

[node name="GameOverLabel" type="Label" parent="Transition/GOver"]
z_index = 5
offset_left = -2014.0
offset_top = 45.0
offset_right = -1739.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.686275, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_juc04")
theme_override_font_sizes/font_size = 40
text = "Game Over"

[node name="Sprite2D" type="Sprite2D" parent="Transition/GOver/GameOverLabel"]
position = Vector2(-412.5, 22)
scale = Vector2(16.9531, 1)
texture = SubResource("GradientTexture2D_m4ld1")

[node name="Background" type="Sprite2D" parent="Transition"]
modulate = Color(1, 1, 1, 0.0862745)
z_index = -10
position = Vector2(-1707, 292)
scale = Vector2(2.00168, 2.00168)
texture = ExtResource("4_62xnu")
script = ExtResource("5_vaqkm")

[node name="MenueItems" type="VBoxContainer" parent="."]
offset_left = 426.0
offset_top = 230.0
offset_right = 982.0
offset_bottom = 598.0
theme_override_constants/separation = 10

[node name="Restart" type="Label" parent="MenueItems"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.412152, 0.412152, 0.412152, 1)
theme_override_fonts/font = ExtResource("2_juc04")
theme_override_font_sizes/font_size = 20
text = "Restart: "

[node name="Restart2" type="Label" parent="MenueItems/Restart"]
layout_mode = 2
offset_left = 129.0
offset_top = 1.0
offset_right = 556.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.705939, 2.23808e-06, 2.88785e-07, 1)
theme_override_colors/font_shadow_color = Color(0.412152, 0.412152, 0.412152, 1)
theme_override_fonts/font = ExtResource("2_juc04")
theme_override_font_sizes/font_size = 20
text = "R"

[node name="Quit" type="Label" parent="MenueItems"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_fonts/font = ExtResource("2_juc04")
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Quit2" type="Label" parent="MenueItems/Quit"]
layout_mode = 2
offset_left = 128.0
offset_right = 556.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.675132, 0.675132, 0, 1)
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_fonts/font = ExtResource("2_juc04")
theme_override_font_sizes/font_size = 20
text = "Q"

[node name="CatsSaved" type="Node2D" parent="."]
z_index = 100
script = ExtResource("3_llbj0")
cats = ExtResource("4_osp8a")

[node name="Cats Saved" type="Label" parent="CatsSaved"]
offset_left = 430.0
offset_top = 135.0
offset_right = 556.0
offset_bottom = 157.0
theme_override_fonts/font = ExtResource("2_juc04")
text = "Cats saved: "

[node name="CatCounter" type="Label" parent="CatsSaved/Cats Saved"]
layout_mode = 0
offset_left = 130.0
offset_top = 1.0
offset_right = 170.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0, 0.627451, 0, 1)
theme_override_colors/font_shadow_color = Color(0.12549, 0.211765, 0.12549, 1)
theme_override_fonts/font = ExtResource("2_juc04")
text = "25"

[node name="SpawnTimer" type="Timer" parent="CatsSaved"]
wait_time = 0.5

[node name="StaticBody2D" type="StaticBody2D" parent="CatsSaved"]
z_index = 100

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CatsSaved/StaticBody2D"]
position = Vector2(-1, 285)
shape = SubResource("RectangleShape2D_sbbma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatsSaved/StaticBody2D"]
position = Vector2(489, 617)
shape = SubResource("RectangleShape2D_p7pbh")

[node name="Points" type="Node2D" parent="."]
z_index = 100
position = Vector2(0, 30)
script = ExtResource("5_nttng")
cats = ExtResource("4_osp8a")

[node name="Points" type="Label" parent="Points"]
offset_left = 431.0
offset_top = 135.0
offset_right = 557.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("2_juc04")
text = "Points: "

[node name="PointCounter" type="Label" parent="Points/Points"]
layout_mode = 0
offset_left = 130.0
offset_top = 1.0
offset_right = 170.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0.792157, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.360784, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_juc04")
text = "25"

[node name="PointTimer" type="Timer" parent="Points"]
wait_time = 0.5

[node name="StaticBody2D" type="StaticBody2D" parent="Points"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Points/StaticBody2D"]
position = Vector2(-1, 285)
shape = SubResource("RectangleShape2D_sbbma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Points/StaticBody2D"]
position = Vector2(488, 591)
shape = SubResource("RectangleShape2D_p7pbh")

[node name="MusicPlayer" parent="." instance=ExtResource("6_kh1h2")]

[node name="SadCats" type="Sprite2D" parent="."]
modulate = Color(0.393086, 0.393086, 0.393085, 1)
z_index = 80
position = Vector2(880, 557)
scale = Vector2(2, 2)
texture = ExtResource("8_65mee")

[node name="Highscore" parent="." instance=ExtResource("6_e401k")]
z_index = -1
position = Vector2(191, 312)

[node name="CreditScreen" parent="." instance=ExtResource("12_ccpjb")]
position = Vector2(786, 121)

[connection signal="timeout" from="CatsSaved/SpawnTimer" to="CatsSaved" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Points/PointTimer" to="Points" method="_on_spawn_timer_timeout"]
